[gd_scene load_steps=5 format=3 uid="uid://b1ixc657wuis1"]

[ext_resource type="Script" path="res://scenes/Obstacles/bad_raven.gd" id="1_4ia75"]
[ext_resource type="PackedScene" uid="uid://c75lipgihvfjc" path="res://scenes/enemy/raven_enemy_01.tscn" id="2_vsno5"]
[ext_resource type="Texture2D" uid="uid://dl5ot6x2up1a6" path="res://assets/textures/enemie_eye.png" id="3_uytwi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_keck0"]
size = Vector2(89, 2157)

[node name="Bad_Raven" type="Node2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_4ia75")

[node name="Raven_obstacle_01" parent="." instance=ExtResource("2_vsno5")]
z_index = 1
y_sort_enabled = true
position = Vector2(-152, -448)

[node name="Raven_obstacle_02" parent="." instance=ExtResource("2_vsno5")]
z_index = 1
y_sort_enabled = true
position = Vector2(-158, 484)

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.6, 0.27451, 0.211765, 1)
z_index = 1
position = Vector2(-216, -420)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_uytwi")

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(0.6, 0.27451, 0.211765, 1)
z_index = 1
position = Vector2(-220, 512)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_uytwi")

[node name="Respawn_checker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Respawn_checker"]
position = Vector2(160.5, 138.5)
shape = SubResource("RectangleShape2D_keck0")

[node name="Score_area" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Score_area"]
position = Vector2(160.5, 138.5)
shape = SubResource("RectangleShape2D_keck0")

[connection signal="area_entered" from="Respawn_checker" to="." method="on_area_entered_respawn"]
